--- a/src/app/styles/sphere.css
+++ b/src/app/styles/sphere.css
@@ -6,6 +6,9 @@
 }
 
 .wrapper {
+    display: flex;
+        justify-content: center;
+        align-items: center;
     width: 100%;
     height: 100%;
     transform: rotateX(45deg);
@@ -13,12 +16,15 @@
 }
 
 .sphere {
+    display: flex;
+        justify-content: center;
+        align-items: center;
     position: relative;
     width: 70%;
-    height: 70%;
+        height: 70%;
     margin: 0 auto;
     transform-style: preserve-3d;
-    animation: rotate 20s infinite linear;
+    animation: rotate 50s infinite linear;
 }
 
 .line {
