--- a/src/app/styles/sphere.css
+++ b/src/app/styles/sphere.css
@@ -34,10 +34,10 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border: 10px;
-    border-style: dotted;
-    border-color: #06e0fd;
-    box-shadow: 1px 0px 20px -2px black, 1px 0px 50px -2px #06fdd4;
+    border: 1px;
+        border-style: solid;
+        border-color: white;
+        box-shadow: 1px 0px 20px -2px white, 1px 0px 20px -2px white;
 }
 
 @keyframes rotate {
